--- a/index.css
+++ b/index.css
@@ -21,6 +21,50 @@ body {
 a {
     text-decoration: none;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 20px;
     color: white;
+}
+
+
+
+
+
+.supportContainer {
+    width: 100%;
+    height: 50px;
+    
+    background-color: rgba(90,200,250,1);
+    text-align: center;
+    
+    border-style: solid
+    border-width: 1px;
+    border-color: black;
+    border-radius: 20px;
+    
+    margin-top: 20px;
+    padding-top: 25px;
+    z-index: 1;
+}
+
+#supportLabelOverride {
+    height: 25px;
+    
+    padding-top: 0px;
+    margin-bottom: 20px;
+    
+    border-radius: 10px;
+}
+
+#overlay {
+  position: fixed; /* Sit on top of the page content */
+  display: none; /* Hidden by default */
+  width: 100%; /* Full width (cover the whole page) */
+  height: 100%; /* Full height (cover the whole page) */
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5); /* Black background with opacity */
+  z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+  cursor: pointer; /* Add a pointer on hover */
 }
